# vl-jepa

./: .env.example  .gitignore  README.md  download_annotations.py  eval.py  infer.py  pyproject.toml  ssh_32009829.json  train.py
scripts/: bootstrap.sh  download_test_data.py  eval_cloud.sh  push_to_hf.py  test_local.sh  train_cloud.sh
vljepa/: __init__.py  config.py  dataset.py  losses.py  models.py  utils.py
