[project]
name = "vl-jepa"
version = "0.1.0"
description = "Simplified VL-JEPA with V-JEPA 2 and Qwen 2.5 0.5B"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",   # Need recent transformers for Qwen2
    "sentence-transformers>=2.3.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "datasets>=2.16.0",
    "pillow>=10.0.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",    # Optional for quantization if needed
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vljepa"]
